--- a/app/views/canned_responses/_form.html.erb
+++ b/app/views/canned_responses/_form.html.erb
@@ -11,6 +11,8 @@
          :label => :field_canned_response_text,
          :cols => 60, :rows => 15,
          :class => 'wiki-edit', :accesskey => accesskey(:edit) %></p>
+   <p><%= f.check_box :global, :required => true,
+         :label => :is_global, :value => "" %></p>         
 </div>
 <p>
   <%= submit_tag l(:button_save) %>
