--- a/app/views/canned_responses/_form.html.erb
+++ b/app/views/canned_responses/_form.html.erb
@@ -12,7 +12,7 @@
          :cols => 60, :rows => 15,
          :class => 'wiki-edit', :accesskey => accesskey(:edit) %></p>
    <p><%= f.check_box :is_global, 
-         :label => :is_global, :value => "1" %></p>         
+         :label => :label_canned_response_is_global, :value => "1" %></p>         
 </div>
 <p>
   <%= submit_tag l(:button_save) %>
